<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_filters"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.nytimessearch.activities.FiltersActivity">


    <TextView
        android:text="@string/beginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="84dp"
        android:id="@+id/tvBeginDate" />

    <TextView
        android:text="@string/sortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBeginDate"
        android:layout_alignLeft="@+id/tvBeginDate"
        android:layout_alignStart="@+id/tvBeginDate"
        android:layout_marginTop="51dp"
        android:id="@+id/tvSortOrder" />

    <TextView
        android:text="@string/newsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSortOrder"
        android:layout_alignLeft="@+id/tvSortOrder"
        android:layout_alignStart="@+id/tvSortOrder"
        android:layout_marginTop="48dp"
        android:id="@+id/tvNewsDesk" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSortOrder"
        android:layout_toRightOf="@+id/tvBeginDate"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:entries="@array/sort_order_array"
        android:id="@+id/spSortOrder" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/tvNewsDesk"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/layoutDeskValues">

        <CheckBox
            android:text="@string/arts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbArts" />

        <CheckBox
            android:text="@string/FashionAndStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbFashion" />

        <CheckBox
            android:text="@string/Sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cbSports" />
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Name"
        android:ems="10"
        android:id="@+id/etBeginDate"
        android:textSize="14sp"
        android:focusable="false"
        android:layout_alignTop="@+id/tvBeginDate"
        android:layout_alignLeft="@+id/spSortOrder"
        android:layout_alignStart="@+id/spSortOrder" />

    <Button
        android:text="@string/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNewsDesk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:id="@+id/btnSave" />

</RelativeLayout>
